--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "nancare",
+	"description": "NanCare - Elderly Support Hub website built with SvelteKit",
 	"private": true,
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
